Optimising the data read

--- a/programmer/package.json
+++ b/programmer/package.json
@@ -10,7 +10,9 @@
   "type": "module",
   "license": "ISC",
   "dependencies": {
+    "blessed": "^0.1.81",
     "commander": "^4.1.1",
+    "ora": "^4.0.3",
     "serialport": "^8.0.7"
   }
 }
