--- a/programmer/package.json
+++ b/programmer/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "blessed": "^0.1.81",
+    "cli-progress": "^3.6.0",
     "commander": "^4.1.1",
     "ora": "^4.0.3",
     "serialport": "^8.0.7"
