--- a/arduino/Makefile
+++ b/arduino/Makefile
@@ -1,27 +1,38 @@
 
 PORT=COM3
 
+ARDUINO_VERSION=1.8.13
+
 .ONESHELL:
 SHELL:=/bin/bash
 
-../tools/arduino-1.8.13-linux64.tar.xz:
+../tools/arduino-${ARDUINO_VERSION}-linux64.tar.xz:
 	@mkdir -p ../tools
 	@cd ../tools
-	@wget https://downloads.arduino.cc/arduino-1.8.13-linux64.tar.xz
+	@wget https://downloads.arduino.cc/arduino-${ARDUINO_VERSION}-linux64.tar.xz
 
 
 .PHONY: config
-config: ../tools/arduino-1.8.13-linux64.tar.xz
+config: ../tools/arduino-${ARDUINO_VERSION}-linux64.tar.xz
 	@cd ../tools
-	@rm -rf arduino-1.8.13
+	@rm -rf arduino-${ARDUINO_VERSION}
 	@echo "Extracting arduino binaries..."
-	@tar xf arduino-1.8.13-linux64.tar.xz
-	@./arduino-1.8.13/arduino --version
+	@tar xf arduino-${ARDUINO_VERSION}-linux64.tar.xz
+	@./arduino-${ARDUINO_VERSION}/arduino --version
 
 .PHONY: build
 build:
-	@mkdir -p ./bin
-	@../tools/arduino-1.8.13/arduino  --verify arduino.ino --board arduino:avr:mega --pref build.path="$$(pwd)/bin" --pref sketchbook.path="$$(pwd)" --pref update.check=false --verbose
+	function tearDown {
+		patch --no-backup-if-mismatch -R ../tools/arduino-${ARDUINO_VERSION}/hardware/arduino/avr/cores/arduino/HardwareSerial.h HardwareSerial.h.patch
+	}
+	trap tearDown EXIT
+	patch --no-backup-if-mismatch ../tools/arduino-${ARDUINO_VERSION}/hardware/arduino/avr/cores/arduino/HardwareSerial.h HardwareSerial.h.patch
+	mkdir -p ./bin
+	../tools/arduino-${ARDUINO_VERSION}/arduino  --verify arduino.ino --board arduino:avr:mega --pref build.path="$$(pwd)/bin" --pref sketchbook.path="$$(pwd)" --pref update.check=false
+
+# Create a patch file of the HardwareSerial.h file to increase RX buffer to 256 bytes
+makediff:
+	@diff ../tools/arduino-${ARDUINO_VERSION}/hardware/arduino/avr/cores/arduino/HardwareSerial.h ./hardware/HardwareSerial.h > HardwareSerial.h.patch
 
 # Must be invoked on windows host
 .PHONY: winupload
