Optimisations - a flash now happens in approx 1 minute - including verification

--- a/arduino/Makefile
+++ b/arduino/Makefile
@@ -24,9 +24,11 @@ config: ../tools/arduino-${ARDUINO_VERSION}-linux64.tar.xz
 build:
 	function tearDown {
 		patch --no-backup-if-mismatch -R ../tools/arduino-${ARDUINO_VERSION}/hardware/arduino/avr/cores/arduino/HardwareSerial.h HardwareSerial.h.patch
+		rm ../tools/arduino-1.8.13/hardware/arduino/avr/platform.local.txt
 	}
 	trap tearDown EXIT
 	patch --no-backup-if-mismatch ../tools/arduino-${ARDUINO_VERSION}/hardware/arduino/avr/cores/arduino/HardwareSerial.h HardwareSerial.h.patch
+	cp ./platform.local.txt ../tools/arduino-1.8.13/hardware/arduino/avr
 	mkdir -p ./bin
 	../tools/arduino-${ARDUINO_VERSION}/arduino  --verify arduino.ino --board arduino:avr:mega --pref build.path="$$(pwd)/bin" --pref sketchbook.path="$$(pwd)" --pref update.check=false
 
